// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp should render Timestamp with a prefix 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1rem;
  color: #757575;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 0.25rem;
}

.c0:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.8125rem;
  }
}

<time
  className="c0"
  dateTime="1530947227000"
>
  Updated 7 July 2018
</time>
`;

exports[`Timestamp should render Timestamp with datetime attribute and text 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1rem;
  color: #757575;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  padding-bottom: 0.25rem;
}

.c0:last-child {
  padding-bottom: 1rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 0.8125rem;
  }
}

<time
  className="c0"
  dateTime="1530947227000"
>
  7 July 2018
</time>
`;
